comment lines to make these JS libraries optional

--- a/app/templates/application.html.haml
+++ b/app/templates/application.html.haml
@@ -5,8 +5,9 @@
   %link{rel: 'stylesheet', type: 'text/css', href: '/stylesheets/bootstrap.min.css'}
   %script{src: '/javascripts/jquery-1.11.1.min.js'}
   %script{src: '/javascripts/bootstrap.min.js'}
-  %script{src: '/javascripts/underscore.min.js'}
-  %script{src: '/javascripts/backbone.min.js'}
+  -# Uncomment to include Underscore and Backbone
+  -#%script{src: '/javascripts/underscore.min.js'}
+  -#%script{src: '/javascripts/backbone.min.js'}
   %meta{name: 'viewport', content: 'width=device-width, initial-scale=1.0'}
 %body
   -##fb-root For Facebook API, if needed
@@ -14,7 +15,7 @@
     .navbar-inner{style: 'height:40px'}
       .container{style: 'height:40px'}
         %a.navbar-brand{href: '#'} 
-          Lotus Boilerplate 
+          Boilerplate
         .nav-collapse.collapse
           %ul.nav.navbar-nav
             %li 
